--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_home.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_home.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="24dp"
-    android:paddingEnd="24dp"
-    android:paddingTop="24dp"
-    android:scrollbars="none"
     android:layout_marginBottom="85dp"
+    android:paddingStart="24dp"
+    android:paddingTop="24dp"
+    android:paddingEnd="24dp"
+    android:scrollbars="none"
     tools:context=".ui.home.HomeFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,45 +19,44 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            app:cardBackgroundColor="@color/pink"
             app:cardCornerRadius="16dp"
-            app:cardElevation="4dp"
-            app:cardBackgroundColor="@color/pink">
+            app:cardElevation="4dp">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/img"
-                android:scaleType="fitEnd"/>
+                android:scaleType="fitEnd"
+                android:src="@drawable/img" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="24dp">
 
-                <LinearLayout
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
+                <TextView
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Hi Fadiyah,"
+                    tools:text="Hi Fadiyah,"
+                    android:lines="1"
+                    android:maxLength="18"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:layout_width="180dp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_light"
-                        android:text="Yuk Mulsi Jaga Kesehatan Mentalmu Sekarang !!!"
-                        android:textColor="@color/white"
-                        android:textSize="12sp" />
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_light"
+                    android:text="Yuk Mulsi Jaga Kesehatan Mentalmu Sekarang !!!"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -71,148 +71,149 @@
             app:cardElevation="4dp">
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_layout_test"
-                android:layout_width="match_parent"
-                android:layout_height="125dp"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="4dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <ImageView
-                    android:id="@+id/ivtest"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitEnd"
-                    android:src="@drawable/bg_test"/>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="180dp"
-                    android:layout_height="match_parent"
-                    android:padding="16dp">
-
-                    <TextView
-                        android:id="@+id/cd_tv_mulaites"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Uji Tingkat Stres Anda Sekarang!"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:textSize="12sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_test"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Mulai Test"
-                        app:cornerRadius="10dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/cd_tv_mulaites" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_layout_psikolog"
-                android:layout_width="match_parent"
-                android:layout_height="125dp"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="4dp"
-                app:layout_constraintTop_toBottomOf="@id/card_layout_test"
-                app:layout_constraintEnd_toEndOf="@id/card_layout_test"
-                app:layout_constraintStart_toStartOf="@id/card_layout_test">
-
-                <ImageView
-                    android:id="@+id/ivpsikolog"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="fitEnd"
-                    android:src="@drawable/bg_psi"/>
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="170dp"
-                    android:layout_height="match_parent"
-                    android:padding="16dp">
-
-                    <TextView
-                        android:id="@+id/cd_tv_cari"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Dapatkan Bantuan Dari Ahli!"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:textSize="12sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_psikolog"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:cornerRadius="10dp"
-                        android:text="Cari Pakar"
-                        app:layout_constraintTop_toBottomOf="@id/cd_tv_cari"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tv_workshop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Workshop Terkini"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@id/card_layout_psikolog"
-                app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"
-                app:layout_constraintStart_toStartOf="@id/card_layout_psikolog"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/workshop_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layoutManager="LinearLayoutManager"
-                tools:listitem="@layout/list_dashboard"
-                app:layout_constraintTop_toBottomOf="@id/tv_workshop"
-                app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"/>
-
-            <TextView
-                android:id="@+id/tv_artikel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Artikel Populer"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@id/workshop_recycler"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/artikel_recycler"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layoutManager="LinearLayoutManager"
-                tools:listitem="@layout/list_dashboard"
-                app:layout_constraintTop_toBottomOf="@id/tv_artikel"/>
+                android:padding="16dp">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_layout_test"
+                    android:layout_width="match_parent"
+                    android:layout_height="125dp"
+                    android:layout_margin="8dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/ivtest"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitEnd"
+                        android:src="@drawable/bg_test" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="180dp"
+                        android:layout_height="match_parent"
+                        android:padding="16dp">
+
+                        <TextView
+                            android:id="@+id/cd_tv_mulaites"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:text="Uji Tingkat Stres Anda Sekarang!"
+                            android:textSize="12sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btn_test"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Mulai Test"
+                            app:cornerRadius="10dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/cd_tv_mulaites" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_layout_psikolog"
+                    android:layout_width="match_parent"
+                    android:layout_height="125dp"
+                    android:layout_margin="8dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="@id/card_layout_test"
+                    app:layout_constraintStart_toStartOf="@id/card_layout_test"
+                    app:layout_constraintTop_toBottomOf="@id/card_layout_test">
+
+                    <ImageView
+                        android:id="@+id/ivpsikolog"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitEnd"
+                        android:src="@drawable/bg_psi" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="170dp"
+                        android:layout_height="match_parent"
+                        android:padding="16dp">
+
+                        <TextView
+                            android:id="@+id/cd_tv_cari"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:text="Dapatkan Bantuan Dari Ahli!"
+                            android:textSize="12sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btn_psikolog"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Cari Pakar"
+                            app:cornerRadius="10dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/cd_tv_cari" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_workshop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:text="Workshop Terkini"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"
+                    app:layout_constraintStart_toStartOf="@id/card_layout_psikolog"
+                    app:layout_constraintTop_toBottomOf="@id/card_layout_psikolog" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/workshop_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"
+                    app:layout_constraintTop_toBottomOf="@id/tv_workshop"
+                    tools:listitem="@layout/list_dashboard" />
+
+                <TextView
+                    android:id="@+id/tv_artikel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:text="Artikel Populer"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@id/workshop_recycler" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/artikel_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layoutManager="LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@id/tv_artikel"
+                    tools:listitem="@layout/list_dashboard" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
