--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_profile.xml
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Fadiyah"
+        tools:text="Hi Fadiyah,"
+        android:lines="1"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/profile_image"
