--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail.xml
@@ -5,37 +5,78 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="24dp"
     android:paddingTop="24dp"
-    android:paddingEnd="24dp"
     tools:context=".ui.quest.DetailActivity">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cd_detailkonsul"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/pink"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="24dp">
+
+            <ImageView
+                android:id="@+id/ic_Back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Back button"
+                android:src="@drawable/baseline_arrow_left_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_extrabold"
+                android:text="Detail Hasil Konsultasi"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <TextView
+        android:id="@+id/tv_titledetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
+        android:layout_marginTop="24dp"
         android:text="Hasil Test Anda"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/barChartHorz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/cd_detailkonsul"  />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_semibold"
+        android:fontFamily="@font/poppins_light"
         android:text="Tanggal"
-        android:textSize="14sp"
-        android:layout_marginBottom="16dp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/barChartHorz"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/barChartHorz" />
 
     <com.db.williamchart.view.HorizontalBarChartView
         android:id="@+id/barChartHorz"
         android:layout_width="0dp"
         android:layout_height="150dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="30dp"
         app:chart_axis="y"
         app:chart_barsBackgroundColor="@color/blue"
         app:chart_barsColor="@color/pink"
@@ -45,117 +86,48 @@
         app:chart_labelsSize="14sp"
         app:chart_smoothLine="true"
         app:chart_spacing = "12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv_titledetail" />
+
+    <TextView
+        android:id="@+id/tv_solusi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Solusi:"
+        android:textSize="20sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/barChartHorz"
+        app:layout_constraintStart_toStartOf="@+id/barChartHorz"
+        app:layout_constraintTop_toBottomOf="@+id/barChartHorz" />
 
 
     <TextView
         android:id="@+id/tv_title_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:text="title desc"
         android:fontFamily="@font/poppins_semibold"
         android:textSize="16sp"
+        android:textAlignment="center"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/barChartHorz" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_solusi" />
     <TextView
         android:id="@+id/tv_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:text="Description"
-        android:fontFamily="@font/poppins_semibold"
+        android:fontFamily="@font/poppins_light"
         android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textAlignment="center"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@id/barChartHorz"
+        app:layout_constraintStart_toStartOf="@id/barChartHorz"
         app:layout_constraintTop_toBottomOf="@+id/tv_title_desc" />
-
-    <!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_depresi"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text="Depresi"-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_depresi_warna"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text=""-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_kecemasan"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text="Kecemasan"-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_kecemasan_warna"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text=""-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_bipolar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text="Bipolar"-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_bipolar_warna"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text=""-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_ocd"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text="O C D"-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_ocd_warna"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text=""-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_skizofrenia"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text="Skizofrenia"-->
-<!--            android:textSize="16sp" />-->
-<!--        <TextView-->
-<!--            android:id="@+id/tv_skizofrenia_warna"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text=""-->
-<!--            android:textSize="16sp" />-->
-
-<!--    </LinearLayout>-->
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
