--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_psikolog.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_psikolog.xml
@@ -15,15 +15,35 @@
         app:cardBackgroundColor="@color/pink"
         app:cardElevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
-        <TextView
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="24dp">
+
+        <ImageView
+            android:id="@+id/ic_Back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="24dp"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/poppins_extrabold"
-            android:text="Daftar Psikolog"
-            android:textAlignment="center"/>
+            android:contentDescription="Back button"
+            android:src="@drawable/baseline_arrow_left_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_extrabold"
+                android:text="Daftar Psikolog"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
     <TextView
