--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_splash.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/logo_mently"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:src="@drawable/logo_mently"
         app:layout_constraintBottom_toBottomOf="parent"
